# fundeps

./: .gitignore  LICENSE  OldConstraintSolver.hs  README.md  TODO.md  TODOs  notes.md  sketch.hs
Backend/: FcTypes.hs
Frontend/: HsRenamer.hs  HsTypes.hs  TcType.hs
Tests/: TestFundep.hs  TestPrimitive.hs
Tests/determinacy/: FDs11.hs
Tests/fd-elaboration/: CHRs3.hs  CHRs4.hs  FDs4.hs
Tests/fd-overlap/: CHRs8.hs
Tests/fd-property/: FDs3.hs
Tests/instances/: FDs7.hs
Tests/superclasses/: FDs5.hs
Tests/termination/: CHRs15.hs  CHRs18.hs  CHRs19.hs  CHRs22.hs  CHRs23.hs  CHRs9.hs
Tests/unamb-witness-fns/: FDs12.hs
Tests/witness-schemes/: FDs9.hs
Utils/: Alternative.hs  Ctx.hs  PrettyPrint.hs  SnocList.hs  Trace.hs  Unique.hs  Var.hs
presentations/: macros.tex  presentation2.md  slides1.tex  tc-ctrsolving.tex
prototype/: Main.hs  OldEntail.hs  default.nix  notes.md  prototype.cabal  shell.nix  stack.yaml
prototype/Backend/: CoercionSimplify.hs  FcSimplify.hs  FcTypeChecker.hs  FcTypes.hs
prototype/Frontend/: Conditions.hs  FunDep.hs  HsConstraintGen.hs  HsEntail.hs  HsParser.hs  HsRenamer.hs  HsTcMonad.hs  HsTypeChecker.hs  HsTypes.hs  TcConditions.hs  TcEntail.hs  TcGen.hs  TcMonad.hs  TcType.hs  TcUnify.hs
prototype/Tests/: TestCollection.hs  TestFundep.hs  TestIndentation.hs  TestPrimitive.hs  TestSuperclass.hs  TestSuperclass2.hs
prototype/Tests/ambiguity/: CHRs12.hs  CHRs13.hs  CHRs14.hs
prototype/Tests/determinacy/: FDs10.hs  FDs11.hs
prototype/Tests/fd-elaboration/: CHRs3.hs  CHRs4.hs  FDs4.hs
prototype/Tests/fd-overlap/: CHRs8.hs
prototype/Tests/fd-property/: FDs1.hs  FDs3.hs
prototype/Tests/instances/: FDs7.hs
prototype/Tests/should-fail/: CHRs11.hs
prototype/Tests/subst-property/: FDs13.hs
prototype/Tests/superclasses/: CHRs10.hs  FDs5.hs  FDs6.hs
prototype/Tests/termination/: CHRs15.hs  CHRs16.hs  CHRs17.hs  CHRs18.hs  CHRs19.hs  CHRs21.hs  CHRs22.hs  CHRs23.hs  CHRs27.hs  CHRs9.hs
prototype/Tests/type-families/: CHRs25.hs
prototype/Tests/unamb-witness-fns/: FDs12.hs
prototype/Tests/witness-schemes/: FDs8.hs  FDs9.hs
prototype/Utils/: Alternative.hs  Annotated.hs  AssocList.hs  Ctx.hs  Errors.hs  PrettyPrint.hs  Substitution.hs  Unique.hs  Utils.hs  Var.hs
reports/: report1.tex  report2.tex
thesis/: Makefile  abstract.tex  appendix.tex  co-simpl.tex  conclusion.tex  conditions.tex  ct-simplification.tex  determinacy.tex  dutch-abstract.tex  entailment.tex  evaluation.tex  functional-dependencies.tex  infer-fundeps.tex  inference.tex  intro.tex  planning.tex  preface.tex  promblem-statement.tex  references.bib  related-work.tex  system-fc.tex  thesis.tex  type-classes.tex
