name:                prototype
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3

executable prototype
  main-is:             Main.hs
  build-depends:       base
                     , megaparsec
                     , pretty
                     , mtl
  other-modules:       Backend.FcTypeChecker
                     , Backend.FcTypes
                     , Frontend.HsParser
                     , Frontend.HsRenamer
                     , Frontend.HsTypeChecker
                     , Frontend.HsTypes
                     , Utils.Annotated
                     , Utils.AssocList
                     , Utils.Ctx
                     , Utils.Errors
                     , Utils.FreeVars
                     , Utils.Kind
                     , Utils.ListT
                     , Utils.PrettyPrint
                     , Utils.SnocList
                     , Utils.Substitution
                     , Utils.Trace
                     , Utils.Unique
                     , Utils.Utils
                     , Utils.Var
  default-language:    Haskell2010
                       -- TODO remove when no longer needed -Wno-unused-top-binds
  ghc-options:         -Wall  -Wno-unused-top-binds -fdefer-typed-holes
