name:                prototype
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3

executable prototype
  main-is:             Main.hs
  build-depends:       base
                     , megaparsec >= 6.4
                     , pretty
                     , mtl
                     , transformers
  other-modules:       Backend.FcTypeChecker
                     , Backend.FcTypes
                     , Backend.FcSimplify
                     , Frontend.FunDep
                     , Frontend.HsParser
                     , Frontend.HsRenamer
                     , Frontend.HsTypeChecker
                     , Frontend.HsTypes
                     , Frontend.TcConditions
                     , Frontend.TcEntail
                     , Frontend.TcGen
                     , Frontend.TcMonad
                     , Frontend.TcType
                     , Frontend.TcUnify
                     , Utils.Alternative
                     , Utils.Annotated
                     , Utils.AssocList
                     , Utils.Ctx
                     , Utils.Errors
                     , Utils.FreeVars
                     , Utils.Kind
                     , Utils.ListT
                     , Utils.PrettyPrint
                     , Utils.SnocList
                     , Utils.Substitution
                     , Utils.Trace
                     , Utils.Unique
                     , Utils.Utils
                     , Utils.Var
  default-language:    Haskell2010
  ghc-options:         -Wall -fdefer-typed-holes -fno-warn-unused-imports

  if !impl(ghc >= 8.0)
    build-depends:     semigroups
